frontend updates to support connectivity model & data network configuration

--- a/examples/demo1/demo1-scenario.yaml
+++ b/examples/demo1/demo1-scenario.yaml
@@ -1,4 +1,4 @@
-version: 1.6.6
+version: 1.6.8
 name: demo1
 deployment:
     netChar:
@@ -9,6 +9,8 @@ deployment:
         throughputUl: 1000
         throughput: null
         packetLoss: null
+    connectivity:
+        model: OPEN
     domains:
         -
             id: PUBLIC
@@ -148,6 +150,7 @@ deployment:
                                     networkLocationsInRange: null
                                     wireless: null
                                     wirelessType: null
+                                    dataNetwork: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -376,6 +379,7 @@ deployment:
                                     networkLocationsInRange: null
                                     wireless: null
                                     wirelessType: null
+                                    dataNetwork: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -506,6 +510,7 @@ deployment:
                                     networkLocationsInRange: null
                                     wireless: null
                                     wirelessType: null
+                                    dataNetwork: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -565,6 +570,7 @@ deployment:
                                     geoData: null
                                     networkLocationsInRange: null
                                     wirelessType: null
+                                    dataNetwork: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -646,6 +652,7 @@ deployment:
                                     geoData: null
                                     networkLocationsInRange: null
                                     wirelessType: null
+                                    dataNetwork: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
@@ -827,6 +834,7 @@ deployment:
                                     networkLocationsInRange: null
                                     wireless: null
                                     wirelessType: null
+                                    dataNetwork: null
                                     meta: null
                                     userMeta: null
                                     linkLatency: null
