--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2104,7 +2104,16 @@ prometheus:
 
     ## Containers allows injecting additional containers. This is meant to allow adding an authentication proxy to a Prometheus pod.
     ##  if using proxy extraContainer  update targetPort with proxy container port
-    containers: []
+    # containers: []
+    # containers:
+    #   - name: thanos-sidecar
+    #     args:
+    #       - "sidecar"
+    #       - "--shipper.upload-compacted"
+    #       - "--objstore.config=$(OBJSTORE_CONFIG)"
+    #       - "--tsdb.path=/prometheus"
+    #       - "--log.level=info"
+    #       - "--log.format=logfmt"
 
     ## InitContainers allows injecting additional initContainers. This is meant to allow doing some changes
     ## (permissions, dir tree) on mounted volumes before starting prometheus
