MEC-256 Alertmanager fix for permission error with PV subpath

--- a/charts/kube-prometheus-stack/templates/alertmanager/persistentvolume.yaml
+++ b/charts/kube-prometheus-stack/templates/alertmanager/persistentvolume.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.alertmanager.alertmanagerSpec.persistentVolume.enabled }}
+{{- if and .Values.alertmanager.enabled .Values.alertmanager.alertmanagerSpec.persistentVolume.enabled }}
 kind: PersistentVolume
 apiVersion: v1
 metadata:
