--- a/charts/redis/templates/redis-slave-statefulset.yaml
+++ b/charts/redis/templates/redis-slave-statefulset.yaml
@@ -84,10 +84,10 @@ spec:
           {{- if .Values.containerSecurityContext.enabled }}
           securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 12 }}
           {{- end }}
-          # command:
-          #   - /bin/bash
-          #   - -c
-          #   - /opt/bitnami/scripts/start-scripts/start-slave.sh
+          command:
+            - /bin/bash
+            - -c
+            - /opt/bitnami/scripts/start-scripts/start-slave.sh
           env:
             - name: REDIS_REPLICATION_MODE
               value: slave
