--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -49,6 +49,8 @@ repo:
     auth:
       # enable authentication & authorization
       enabled: true
+      # Is platform [open|secure] for all github/gitlab users or only selected ones
+      provider-mode: open
       # Session config
       session:
         # session encryption key k8s secret (data: encryption-key)
@@ -67,8 +69,6 @@ repo:
         redirect-uri: https://my-platform-fqdn/auth/v1/authorize
         # OAuth k8s secret (data: client-id, secret)
         secret: meep-oauth-github
-        # Is platform [open|secure] for all github users or only selected ones
-        provider-mode: open
       # GitLab OAuth provider config
       gitlab:
         # enable GitLab OAuth
