sandbox metrics in platform dashboard + grafana support for min refresh interval of 1s

--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -526,6 +526,8 @@ grafana.ini:
     org_role: Viewer
   security:
     allow_embedding: true
+  dashboards:
+    min_refresh_interval: 1s
  # https://grafana.com/docs/grafana/latest/auth/github/#enable-github-in-grafana
  # auth.github:
  #    enabled: false
