--- a/charts/meep-edge-platform-app-enablement/values-template.yaml
+++ b/charts/meep-edge-platform-app-enablement/values-template.yaml
@@ -28,12 +28,14 @@ ingress:
   hosts:
     - name: ''
       paths:
-        - /{{ .SandboxName }}/edge-platform-app-enablement
+        - /{{ .SandboxName }}/mec_app_support
+        - /{{ .SandboxName }}/mec_service_mgmt
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/force-ssl-redirect: {{ .HttpsOnly }}
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      rewrite ^/{{ .SandboxName }}/rni(/|$)(.*)$ /rni/$2 break;
+      rewrite ^/{{ .SandboxName }}/mec_app_support(/|$)(.*)$ /mec_app_support/$2 break;
+      rewrite ^/{{ .SandboxName }}/mec_service_mgmt(/|$)(.*)$ /mec_service_mgmt/$2 break;
     {{- if .AuthEnabled }}
     nginx.ingress.kubernetes.io/auth-url: https://$http_host/auth/v1/authenticate?svc=meep-edge-platform-app-enablement&sbox={{ .SandboxName }}
     {{- end }}
