Adding vendor files

--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Show Source"
 gh_edit_repository: "https://github.com/InterDigitalInc/AdvantEDGE" # the github URL for your repo
 gh_edit_branch: "gh-pages" # the branch that your docs is served from
-gh_edit_source: docs # the source that your files originate from
+gh_edit_source: "" # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
 # Color scheme currently only supports "dark", "light"/nil (default),
