--- a/charts/meep-sandbox-ctrl/values-template.yaml
+++ b/charts/meep-sandbox-ctrl/values-template.yaml
@@ -72,5 +72,6 @@ user:
     servepath: "/user-swagger-sandbox"
 codecov:
   enabled: false
+  location: "<WORKDIR>/codecov/meep-sandbox-ctrl"
 
 meepOrigin: core
