--- a/charts/meep-rnis/templates/codecov-pv.yaml
+++ b/charts/meep-rnis/templates/codecov-pv.yaml
@@ -11,7 +11,7 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: "/home/englab/.meep/codecov/meep-rnis"
+    path: {{ .Values.codecov.location }}
 
 ---
 kind: StorageClass
