--- a/charts/minio/values.yaml
+++ b/charts/minio/values.yaml
@@ -187,6 +187,7 @@ ingress:
         - /
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
     # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     # nginx.ingress.kubernetes.io/configuration-snippet: |
     #   rewrite ^/minio(/|$)(.*)$ /$2 break;
