--- a/config/secrets.yaml
+++ b/config/secrets.yaml
@@ -8,3 +8,7 @@ meep-oauth-github:
 meep-oauth-gitlab:
   client-id: "my-gitlab-client-id"
   secret: "my-gitlab-secret"
+
+meep-minio-objstore-config:
+  accessKey: "my-access-key"
+  secretkey: "my-secret-key"
