fixed minio secret accesskey

--- a/config/secrets.yaml
+++ b/config/secrets.yaml
@@ -10,5 +10,6 @@ meep-oauth-gitlab:
   secret: "my-gitlab-secret"
 
 meep-minio-objstore-config:
-  accessKey: "my-access-key"
+  accesskey: "my-access-key"
   secretkey: "my-secret-key"
+
