disabled influx data backup for long-term storage configuration

--- a/config/long-term-storage-repocfg.yaml
+++ b/config/long-term-storage-repocfg.yaml
@@ -96,7 +96,7 @@ repo:
       # Influx configuration
       influx:
         # enable influx data backups
-        enabled: true
+        enabled: false
         # object store url
         url: my-object-store-fqdn
         # object store configuration secret
